# cmake_example

./: .clang-format  .gitignore  CMakeLists.txt
01-basic/: CMakeLists.txt
01-basic/A-hello-cmake/: CMakeLists.txt
01-basic/B-hello-headers/: CMakeLists.txt
01-basic/C-static-library/: CMakeLists.txt
01-basic/D-shared-library/: CMakeLists.txt
01-basic/E-installing/: CMakeLists.txt
01-basic/I-compiling-with-clang/: CMakeLists.txt
03-code-generation/: CMakeLists.txt
03-code-generation/configure-files/: path.h
04-static-analysis/: CMakeLists.txt
04-static-analysis/clang-format/: CMakeLists.txt
04-static-analysis/clang-format/cmake/modules/: FindClangFormat.cmake  clang-format.cmake
04-static-analysis/clang-format/subproject1/: CMakeLists.txt
04-static-analysis/clang-format/subproject2/: CMakeLists.txt
04-static-analysis/cppcheck/: CMakeLists.txt
04-static-analysis/cppcheck-compile-commands/: CMakeLists.txt
04-static-analysis/cppcheck-compile-commands/cmake/modules/: FindCppCheck.cmake
04-static-analysis/cppcheck-compile-commands/subproject1/: CMakeLists.txt
04-static-analysis/cppcheck-compile-commands/subproject2/: CMakeLists.txt
04-static-analysis/cppcheck/cmake/modules/: FindCppCheck.cmake
04-static-analysis/cppcheck/subproject1/: CMakeLists.txt
04-static-analysis/cppcheck/subproject2/: CMakeLists.txt
05-unit-testing/google-test/: CMakeLists.txt
05-unit-testing/google-test/gmock-learn/: CMakeLists.txt  biz.h  mock-user.h  user-gmock-test.cpp  user.h
05-unit-testing/google-test/gtest-learn/: CMakeLists.txt  foo.cpp  foo.h  foo_environment.cpp  foo_test.cpp
