
add_subdirectory(A-hello-cmake)
add_subdirectory(B-hello-headers)
add_subdirectory(C-static-library)
add_subdirectory(D-shared-library)
add_subdirectory(E-installing)
add_subdirectory(F-build-type)
add_subdirectory(G-compile-flags)
add_subdirectory(H-third-party-library)
add_subdirectory(I-compiling-with-clang)
add_subdirectory(K-imported-targets)